// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlannerItems /> should have a "My Awesome Planner Note" note on our mock data: without hover 1`] = `
.c0 {
  list-style-type: none;
}

.c0:last-child {
  margin-bottom: 16px;
}

.c0 > button {
  cursor: pointer;
}

.c5 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c6 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c2 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 svg,
.c2 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c2 svg + .c4,
.c2 img + .c4 {
  padding-left: 1.5rem;
}

.c2 .warning-icon {
  font-size: 14px;
  width: 14px !important;
  margin-top: -10px;
  margin-left: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
}

.c1 .MuiCheckbox-root {
  width: 48px;
  height: 48px;
  font-size: 18px;
  margin-right: 5px;
}

.c1 .c4 {
  padding-right: 0;
}

.c7 {
  color: #7B746F;
  font-size: 14px;
  line-height: 1.6rem;
}

.c3 {
  line-height: 14px;
  text-align: center;
  padding: 0 16px 0 0;
  color: #D73F09;
  width: 58px;
}

.c3 strong {
  line-height: 20px;
  font-size: 20px;
}

.c8 {
  background: #E9E5E4;
  border-radius: 4px;
  color: #2E2B2A;
  font-size: 12px;
  padding: 2px 4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  text-align: center;
  white-space: nowrap;
}

@media (min-width:768px) {

}

<li
  class="c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="course-list-item-header"
    >
      <div>
        WR
      </div>
      <div>
        <strong>
          214
        </strong>
      </div>
    </div>
    <div
      class="c4 c5"
    >
      <h4
        class="c6"
      >
        My Awesome Planner Note
      </h4>
      <div
        class="c7"
      >
        Due Jan 1st at 1:01 AM
      </div>
    </div>
    <span
      class="c8"
    >
      discussion topic
    </span>
  </div>
</li>
`;

exports[`<PlannerItems /> should have a "Week 5 Lab Discussion" assignment on our mock data: with hover 1`] = `
.c5 {
  color: #D73F09;
  background-color: transparent;
}

.c0 {
  list-style-type: none;
}

.c0:last-child {
  margin-bottom: 16px;
}

.c0 > button {
  cursor: pointer;
}

.c7 {
  padding-right: 16px;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  text-align: left;
}

.c9 {
  color: #423E3C;
  margin: 0;
  font-weight: normal;
}

.c3 {
  width: 100%;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  border-radius: 8px;
  -webkit-transition: all 150ms ease-in-out 0s;
  transition: all 150ms ease-in-out 0s;
  padding: 12px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 svg,
.c3 img {
  height: 3rem;
  font-size: 2.4rem;
  width: 3rem !important;
}

.c3 svg + .c6,
.c3 img + .c6 {
  padding-left: 1.5rem;
}

.c3 .warning-icon {
  font-size: 14px;
  width: 14px !important;
  margin-top: -10px;
  margin-left: 5px;
}

.c4 {
  color: #423E3C;
  cursor: pointer;
}

.c4:hover {
  border: 1px solid transparent;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
}

.c1 .MuiCheckbox-root {
  width: 48px;
  height: 48px;
  font-size: 18px;
  margin-right: 5px;
}

.c1 .c6 {
  padding-right: 0;
}

.c1:hover {
  box-shadow: rgba(66,62,60,0.1) 0px 10px 16px,rgba(105,99,97,0.05) 0px 3px 16px;
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  border-color: transparent;
}

.c1:hover .c8,
.c1:hover .c2 {
  color: #D73F09;
}

.c10 {
  color: #7B746F;
  font-size: 14px;
  line-height: 1.6rem;
}

.c11 {
  background: #E9E5E4;
  border-radius: 4px;
  color: #2E2B2A;
  font-size: 12px;
  padding: 2px 4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 4px;
  text-align: center;
  white-space: nowrap;
}

@media (min-width:768px) {

}

<li
  class="c0 c1"
>
  <a
    class="c2 c3 c4"
    href="https://canvas.oregonstate.edu/courses/1724943/assignments/7547409/submissions/6227907"
    target="_blank"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-file-pen c5"
      color="#D73F09"
      data-icon="file-pen"
      data-prefix="fal"
      data-testid="planner-icon"
      focusable="false"
      role="img"
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M64 480H258.5L257.4 484.2C255.1 493.6 255.7 503.2 258.8 512H64C28.65 512 0 483.3 0 448V64C0 28.65 28.65 0 64 0H220.1C232.8 0 245.1 5.057 254.1 14.06L369.9 129.9C378.9 138.9 384 151.2 384 163.9V299.6L352 331.6V192H240C213.5 192 192 170.5 192 144V32H64C46.33 32 32 46.33 32 64V448C32 465.7 46.33 480 64 480H64zM347.3 152.6L231.4 36.69C229.4 34.62 226.8 33.18 224 32.48V144C224 152.8 231.2 160 240 160H351.5C350.8 157.2 349.4 154.6 347.3 152.6zM473.3 241.4C492.1 222.6 522.4 222.6 541.2 241.4L558.5 258.7C577.2 277.4 577.2 307.8 558.5 326.5L404.1 480.1C398.8 486.2 391.1 490.6 382.7 492.7L307.9 511.4C302.4 512.8 296.6 511.2 292.7 507.2C288.7 503.2 287.1 497.4 288.5 491.1L307.2 417.2C309.3 408.8 313.6 401 319.8 394.9L473.3 241.4zM518.6 263.1C512.3 257.7 502.2 257.7 495.9 263.1L471.2 288.8L511.1 328.7L535.9 303.9C542.1 297.7 542.1 287.5 535.9 281.3L518.6 263.1zM338.2 424.1L325.1 473.9L374.9 461.6C377.7 460.9 380.3 459.5 382.3 457.4L488.5 351.3L448.5 311.4L342.4 417.5C340.4 419.6 338.9 422.1 338.2 424.1L338.2 424.1z"
        fill="currentColor"
      />
    </svg>
    <div
      class="c6 c7"
    >
      <h4
        class="c8 c9"
      >
        Week 5 Lab Discussion
      </h4>
      <div
        class="c10"
      >
        Due May 2nd at 6:59 AM
      </div>
    </div>
    <span
      class="c11"
    >
      discussion topic
    </span>
  </a>
</li>
`;
